deploy/operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vc-operator-controller-manager
  namespace: vcop-system
  labels:
    app.kubernetes.io/name: vc-operator
    app.kubernetes.io/component: controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vc-operator
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vc-operator
    spec:
      serviceAccountName: vc-operator-controller-manager
      containers:
        - name: manager
          image: vops/vc-operator:v0.37.0
          command:
            - /manager
          args:
            - --leader-elect=true
            - --metrics-bind-address=:8080
            - --health-probe-bind-address=:8081
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
